manifests/fruits-catalog-resources.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  annotations:
    alpha.image.policy.openshift.io/resolve-names: '*'
    app.openshift.io/vcs-ref: ''
    app.openshift.io/vcs-uri: 'https://github.com/lbroudoux/programmez-article-api-lifecycle'
    image.openshift.io/triggers: >-
      [{"from":{"kind":"ImageStreamTag","name":"fruits-catalog:latest","namespace":"fruits-catalog"},"fieldPath":"spec.template.spec.containers[?(@.name==\"fruits-catalog\")].image","pause":"false"}]
    openshift.io/generated-by: OpenShiftWebConsole
  name: fruits-catalog
  labels:
    app: fruits-catalog
    app.kubernetes.io/component: fruits-catalog
    app.kubernetes.io/instance: fruits-catalog
    app.kubernetes.io/name: java
    app.kubernetes.io/part-of: fruits-catalog-app
    app.openshift.io/runtime: quarkus
    app.openshift.io/runtime-version: openjdk-11-ubi8
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fruits-catalog
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: fruits-catalog
        deploymentconfig: fruits-catalog
    spec:
      containers:
        - name: fruits-catalog
          image: fruits-catalog:latest
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8443
              protocol: TCP
            - containerPort: 8778
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
---
kind: Service
apiVersion: v1
metadata:
  annotations:
    app.openshift.io/vcs-ref: ''
    app.openshift.io/vcs-uri: 'https://github.com/lbroudoux/programmez-article-api-lifecycle'
    openshift.io/generated-by: OpenShiftWebConsole
  name: fruits-catalog
  labels:
    app: fruits-catalog
    app.kubernetes.io/component: fruits-catalog
    app.kubernetes.io/instance: fruits-catalog
    app.kubernetes.io/name: java
    app.kubernetes.io/part-of: fruits-catalog-app
    app.openshift.io/runtime: java
    app.openshift.io/runtime-version: openjdk-11-ubi8
spec:
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: 8443-tcp
      protocol: TCP
      port: 8443
      targetPort: 8443
    - name: 8778-tcp
      protocol: TCP
      port: 8778
      targetPort: 8778
  selector:
    app: fruits-catalog
    deploymentconfig: fruits-catalog
  type: ClusterIP
  sessionAffinity: None
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: fruits-catalog
  labels:
    app: fruits-catalog
    app.kubernetes.io/component: fruits-catalog
    app.kubernetes.io/instance: fruits-catalog
    app.kubernetes.io/name: java
    app.kubernetes.io/part-of: fruits-catalog-app
    app.openshift.io/runtime: java
    app.openshift.io/runtime-version: openjdk-11-ubi8
  annotations:
    openshift.io/host.generated: 'true'
spec:
  to:
    kind: Service
    name: fruits-catalog
    weight: 100
  port:
    targetPort: 8080-tcp
  wildcardPolicy: None
